--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,34 +1,38 @@
-# Database Configuration
+# Backend environment example (copy to backend/.env and customize for local dev)
+
+# Server
+SERVER_PORT=8081
+
+# Database
 DB_URL=jdbc:postgresql://localhost:5432/kortex
 DB_USERNAME=postgres
-DB_PASSWORD=your_password_here
+DB_PASSWORD=changeme
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here_minimum_64_characters_long
+# JWT
+JWT_SECRET=replace_with_random_64+_char_hex_or_base64_string
 JWT_EXPIRATION=86400000
 
-# Document Storage
-DOCUMENT_STORAGE_PATH=./uploads
+# Hugging Face
+HUGGINGFACE_API_URL=https://api-inference.huggingface.co/models
+HUGGINGFACE_API_TOKEN=replace_with_hf_token_or_leave_empty
+HUGGINGFACE_MODEL=BAAI/bge-small-en-v1.5
+HUGGINGFACE_EMBEDDINGS_URL=http://localhost:8001
 
-# HuggingFace API
-HUGGINGFACE_API_TOKEN=your_huggingface_token_here
-HUGGINGFACE_API_URL=https://api-inference.huggingface.co/pipeline/feature-extraction
-HUGGINGFACE_MODEL=sentence-transformers/all-MiniLM-L6-v2
-
-# Qdrant Vector Database
+# Qdrant
 QDRANT_HOST=localhost
 QDRANT_PORT=6334
 QDRANT_API_KEY=
 QDRANT_USE_TLS=false
 
-# LLM Provider (openai or groq)
+# LLM Provider (groq default)
 LLM_PROVIDER=groq
+GROQ_API_KEY=replace_with_groq_key_or_leave_empty
+GROQ_API_URL=https://api.groq.com/openai/v1
+GROQ_MODEL=llama-3.3-70b-versatile
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenAI (optional)
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-3.5-turbo
 
-# Groq Configuration
-GROQ_API_KEY=your_groq_api_key_here
-GROQ_API_URL=https://api.groq.com/openai/v1
-GROQ_MODEL=llama3-8b-8192
+# Document storage
+DOCUMENT_STORAGE_PATH=./uploads
