--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -95,12 +95,19 @@
 		<artifactId>client</artifactId>
 		<version>1.9.1</version>
 	</dependency>
-	<!-- OpenAI Java SDK -->
+	<!-- Protobuf for Qdrant -->
 	<dependency>
-		<groupId>com.theokanning.openai-gpt3-java</groupId>
-		<artifactId>service</artifactId>
-		<version>0.18.2</version>
+		<groupId>com.google.protobuf</groupId>
+		<artifactId>protobuf-java</artifactId>
+		<version>3.25.1</version>
 	</dependency>
+	<!-- Guava for Qdrant -->
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>33.0.0-jre</version>
+	</dependency>
+	<!-- Removed OpenAI Java SDK (standardize on Groq) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
