--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=backend
 
+# Import local .env for property overrides (optional)
+# Supports running from project root or backend folder
+# Explicitly treat .env files as .properties for Spring to parse
+spring.config.import=optional:file:./backend/.env[.properties]
+
+# Server port (override with env var SERVER_PORT)
+server.port=${SERVER_PORT:8081}
+
 # Database Configuration
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/kortex}
 spring.datasource.username=${DB_USERNAME:postgres}
@@ -20,9 +28,11 @@ jwt.expiration=${JWT_EXPIRATION:86400000}
 document.storage.path=${DOCUMENT_STORAGE_PATH:./uploads}
 
 # HuggingFace Configuration
-huggingface.api.url=${HUGGINGFACE_API_URL:https://api-inference.huggingface.co/pipeline/feature-extraction}
+# Prefer direct Inference API to avoid router 404s
+huggingface.api.url=${HUGGINGFACE_API_URL:https://api-inference.huggingface.co/models}
 huggingface.api.token=${HUGGINGFACE_API_TOKEN:your_huggingface_token_here}
-huggingface.model.name=${HUGGINGFACE_MODEL:sentence-transformers/all-MiniLM-L6-v2}
+huggingface.model.name=${HUGGINGFACE_MODEL:BAAI/bge-small-en-v1.5}
+huggingface.embeddings.url=${HUGGINGFACE_EMBEDDINGS_URL:}
 huggingface.embedding.dimension=384
 huggingface.batch.size=32
 
@@ -43,7 +53,7 @@ rag.tokens.per.word=1.3
 
 # LLM Configuration
 # Provider: openai or groq
-llm.provider=${LLM_PROVIDER:openai}
+llm.provider=${LLM_PROVIDER:groq}
 # OpenAI Configuration
 llm.openai.api.key=${OPENAI_API_KEY:your_openai_api_key_here}
 llm.openai.model=${OPENAI_MODEL:gpt-3.5-turbo}
@@ -52,7 +62,7 @@ llm.openai.temperature=0.7
 # Groq Configuration
 llm.groq.api.key=${GROQ_API_KEY:your_groq_api_key_here}
 llm.groq.api.url=${GROQ_API_URL:https://api.groq.com/openai/v1}
-llm.groq.model=${GROQ_MODEL:llama3-8b-8192}
+llm.groq.model=${GROQ_MODEL:llama-3.3-70b-versatile}
 llm.groq.max.tokens=1000
 llm.groq.temperature=0.7
 
